spider lady gap fixing

--- a/main.css
+++ b/main.css
@@ -102,7 +102,7 @@ a {
 
 .logo-icon {
   margin: 0 auto;
-  width: 40vh;
+  width: 35vh;
 }
 
 .btn-panel {
