--- a/src/playground/playground.css
+++ b/src/playground/playground.css
@@ -23,7 +23,8 @@ body {
   min-height: 100%;
   -ms-overflow-style: none;
   scrollbar-width: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   user-select: none;
   -webkit-user-select: none;
@@ -67,7 +68,7 @@ header {
 .header-navigation-btn {
   width: 2.5vw;
   height: 2.5vw;
-  margin: .2vw;
+  margin: 0.2vw;
   background: url('../../Sprites/Buttons/Used_Button_01.png');
   background-size: cover;
   border-radius: 50%;
@@ -109,7 +110,8 @@ main {
 .bottom-cards-zone {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  column-gap: 1vw;
 }
 
 .active-cards-container {
@@ -140,30 +142,36 @@ main {
   --card-height: 8vw;
 }
 
-.active-cards-container>.card-element.closed:not(:first-child, .locked) {
+.active-cards-container > .card-element.closed:not(:first-child, .locked) {
   margin-top: -7.5vw;
-  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+    margin-left 0.25s ease;
 }
 
-.active-cards-container>.card-element.first:not(:first-child, .locked) {
+.active-cards-container > .card-element.first:not(:first-child, .locked) {
   margin-top: -7.5vw;
-  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+    margin-left 0.25s ease;
 }
 
-.active-cards-container>.card-element.opened:not(:first-child, .first, .locked) {
+.active-cards-container
+  > .card-element.opened:not(:first-child, .first, .locked) {
   margin-top: -6.5vw;
-  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+    margin-left 0.25s ease;
 }
 
-.active-cards-container>.card-element.locked:not(:first-child) {
+.active-cards-container > .card-element.locked:not(:first-child) {
   margin-top: -8vw;
-  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+    margin-left 0.25s ease;
 }
 
 .card-element.highlighted {
   border-color: #ffff00a1;
   box-shadow: 0 0 3px 3px #ffff00a1;
-  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+    margin-left 0.25s ease;
 }
 
 .card-locker-hidden {
@@ -183,7 +191,7 @@ main {
   transition: scale 0.25s ease;
 }
 
-.active-cards-container>.card-element.opened.selected {
+.active-cards-container > .card-element.opened.selected {
   margin-top: -6.5vw;
   width: 6.6vw;
   height: 8.8vw;
@@ -191,7 +199,7 @@ main {
   transition: all 0.25s ease;
 }
 
-.active-cards-container>.card-element.opened.selected:not(.first) {
+.active-cards-container > .card-element.opened.selected:not(.first) {
   margin-top: -7vw;
   width: 6.6vw;
   height: 8.8vw;
@@ -218,11 +226,11 @@ main {
   margin-right: 10vw;
 }
 
-.extra-cards-container>.card-element:not(:last-child) {
+.extra-cards-container > .card-element:not(:last-child) {
   margin-left: -5.98vw;
 }
 
-.cards-container>.card-element:not(:first-child) {
+.cards-container > .card-element:not(:first-child) {
   margin-left: -6.05vw;
 }
 
@@ -249,7 +257,7 @@ footer {
 .control-btn {
   width: 4vw;
   height: 4vw;
-  margin: .5vw;
+  margin: 0.5vw;
   background: url('../../Sprites/Buttons/Used_Button_01.png');
   background-size: cover;
   border-radius: 50%;
@@ -264,7 +272,6 @@ footer {
   margin-top: 15%;
 }
 
-
 @media only screen and (orientation: portrait) {
   /* Cards sizes */
 
@@ -273,14 +280,19 @@ footer {
   .extra-cards-container,
   .card-element,
   .test-card {
-    width: 9.6vw;
-    height: 13vw;
+    width: 8.8vw;
+    height: 11.75vw;
+  }
+
+  .card-locked-showed{
+    width: 8.8vw;
+    height: 11.75vw;
   }
 
   .header-navigation-btn {
     width: 7vw;
     height: 7vw;
-    margin: .5vw;
+    margin: 0.5vw;
   }
 
   .header-navigation-list-icon {
@@ -294,24 +306,33 @@ footer {
     --card-height: 13vw;
   }
 
-  .active-cards-container>.card-element.closed:not(:first-child, .locked) {
-    margin-top: -11.5vw;
-    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  .active-cards-container > .card-element.closed:not(:first-child, .locked) {
+    /* margin-top: -11.5vw; */
+    margin-top: -4.5vh;
+    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+      margin-left 0.25s ease;
   }
 
-  .active-cards-container>.card-element.first:not(:first-child, .locked) {
-    margin-top: -11.5vw;
-    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  .active-cards-container > .card-element.first:not(:first-child, .locked) {
+    /* margin-top: -11.5vw; */
+    margin-top: -4.5vh;
+    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+      margin-left 0.25s ease;
   }
 
-  .active-cards-container>.card-element.opened:not(:first-child, .first, .locked) {
-    margin-top: -10vw;
-    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  .active-cards-container
+    > .card-element.opened:not(:first-child, .first, .locked) {
+    /* margin-top: -10vw; */
+    margin-top: -4vh;
+    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+      margin-left 0.25s ease;
   }
 
-  .active-cards-container>.card-element.locked:not(:first-child) {
-    margin-top: -12.6vw;
-    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease, margin-left 0.25s ease;
+  .active-cards-container > .card-element.locked:not(:first-child) {
+    /* margin-top: -12.6vw; */
+    margin-top: -5.4vh;
+    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
+      margin-left 0.25s ease;
   }
 
   .counter-text {
@@ -331,12 +352,12 @@ footer {
     width: 95vw;
   }
 
-  .extra-cards-container>.card-element:not(:last-child) {
+  .extra-cards-container > .card-element:not(:last-child) {
     margin-left: -8vw;
     width: 9.6vw;
   }
 
-  .cards-container>.card-element:not(:first-child) {
+  .cards-container > .card-element:not(:first-child) {
     margin-left: -8vw;
   }
 
@@ -347,6 +368,7 @@ footer {
   .bottom-cards-zone,
   .active-cards-zone {
     width: 104.5%;
+    justify-content: space-between;
   }
 
   .control-btn {
